# OG-Template

./: .env.example  Dockerfile  README.md  ideas.md  pyproject.toml  requirements.txt  setup.sh
app/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/controllers/: __init__.py  user_controller.py
app/db/: __init__.py  base.py  connection.py
app/db/migrations/: __init__.py
app/db/seeders/: __init__.py
app/interfaces/: __init__.py
app/middleware/: __init__.py  cors.py  logging.py
app/models/: __init__.py  base.py  response.py  user.py
app/n8n_converter/: __init__.py
app/n8n_converter/parser/: __init__.py
app/n8n_converter/templates/: __init__.py
app/routes/: __init__.py  api.py  core.py  health.py  users.py
app/schema/: __init__.py  base.py  user.py
app/services/: __init__.py  user_service.py
app/services/auth/: __init__.py
app/services/core/: __init__.py  database.py
app/utils/: __init__.py  helpers.py  validators.py
app/validators/: __init__.py
app/workflows/: __init__.py
scripts/: run.sh  test_api.sh
tests/: test_main.py
